[package]
name = "testable_rocket"
version = "0.1.0"
authors = ["Eric Dattore <eric@dattore.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "migrate" ] }
include_dir = "0.6"
redis = { version = "0.19.0", features = ["tokio-comp"] }
uuid = { version = "0.8.1", features = [ "v4" ] }
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
serde = { version = "1.0", features = [ "derive" ] }
dotenv = "0.15"

[dev-dependencies]
mockall = "0.9.0"
